@@ -1,6 +1,10 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.555 2009-06-24 21:38:51 jluis Exp $
+	$Id: ChangeLog,v 1.556 2009-06-26 04:05:54 guru Exp $
 -----------------------------------------------------------------------------------------
+
+2009-06-25	pwessel
+	* gmt_grdio.c:		Change for reasonable x/y range if units has the words "longitude"
+				or "latitude" before concluding we have geodetic coordinates.
 
 2009-06-24	jluis
 	* x2sys/x2sys_merge.c:	New program to merge updated COEs table into a main COE table database
